/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-11 15:56 UTC+0100 Aleksander Czajczynski (hb fki.pl) [corebuild]
  * .github/workflows/ubuntu-arm64.yml
    * OpenSSL build system ignores CC= nor there's linux-aarch64-clang
      on this platform

2025-11-11 15:08 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * build/openssl/Makefile
    + added $HBPK_CC_FAMILY before make, before ./configure
      it was not enough, build progressed with gcc on Linux.

2025-11-11 14:18 UTC+0100 Aleksander Czajczynski (hb fki.pl) [corebuild]
  * .github/workflows/windows-arm64.yml
  + build/zig-binary/windres-rc
    + added windres-rc wrapper, borrowed from vcpkg due to
      no windres available on MSYS2 CLANGARM64. Actually
      you could borrow MINGW64 package executing non native...
      but hey.

2025-11-11 08:47 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  * build/harbour-pgsql/Makefile
    ! arch
    * derive pgsql package name from installed libpq ver

2025-11-11 07:49 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  * build/openssl/Makefile
    * separate step for deps needing GNU tools, not to spoil
      pure zig cc build environment for others

2025-11-10 23:02 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  * build/libpq-inherit/Makefile
    * build fixes

2025-11-10 22:31 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/macos.yml
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml