@@ -27,7 +27,7 @@ do-build:
 
 do-pkginst:
 	mkdir -p dest/lib && cp lib*.a dest/lib # TODO: detect cross-build, don't copy to system dir
-	mkdir -p dest/harbour/lib/$(HBPK_PLATFORM)/$(HBPK_COMPILER) && cp $(WORKDIR)/lib*.a dest/harbour/lib/$(HBPK_PLATFORM)/$(HBPK_COMPILER)
+	mkdir -p dest/harbour/lib/$(HBPK_PLATFORM)/$(HBPK_COMPILER) && cp lib*.a dest/harbour/lib/$(HBPK_PLATFORM)/$(HBPK_COMPILER)
 	mkdir -p dest/harbour/contrib/hbotp
 	cp -r $(WORKDIR)/src/hb/* dest/harbour/contrib/hbotp
 	
